# spdlog

./: .gitignore  README.md
example/: CMakeLists.txt  example.cpp  steal_str.cpp  steal_str2.cpp
include/spdlog/details/: registry.h
include/spdlog/sinks/: rotating_file_sink-inl.h  rotating_file_sink.h
logs/: async_log.txt  basic-log.txt  daily_2023-06-13.txt  events-sample.txt  multisink.txt  new-default-log.txt  rotating.txt
